# Changelog

## Version 5.7.4

* Fixing $578 Missing code signing to FastFlix exec inside of the installer (thanks to Sam Katakouzinos)
* Fixing #580 No Downmix key error on profile save (thanks to Hankuu)
* Fixing #581 Fastflix could not recognize hevc video containing hdr10plus metadata with recent ffmpeg build (thanks to alpha-0)

## Version 5.7.3

* Fixing #574 Downmix audio channels not working (thanks to eikixsh)
* Fixing audio and subtitle track count in queue

## Version 5.7.2

* Fixing audio quality targeting to be enabled properly for ffmpeg
* Fixing #570 Changing audio language does not work (thanks to danielly2020)
* Fixing Setting audio track title does not work (thanks to Horatio on Discord)
* Fixing #571 AttributeError: 'NoneType' object has no attribute 'lower' (thanks to 'Dude' mikeSGman)
* Removing builds for MacOS 11 as Github has deprecated it

## Version 5.7.1

* Fixing profile audio box not being able to select pattern match
* Fixing #561 Subtitles all show as English in FastFlix subtitles screen (thanks to David James)
* Fixing #562 Audio conversion window defaults channel layout to stereo (thanks to David James)
* Fixing #563 No Thumbnails When Importing Video (thanks to Damundai)
* Fixing #564 Audio custom bitrate box shows units in kilobits/second but passes bits/second as the parameter (thanks to tcmbackwards)

## Version 5.7.0

* Adding new audio encoding panel
* Adding support for audio quality targeting instead of bitrate
* Fixing that audio and subtitles would be reset on change of encoder
* Fixing #543 systems with more than one opencl device would break thumbnails and some encodings (thanks to swadomlic)
* Fixing #505 (maybe) trying new methods to clean file paths for subtitles (thanks to Maddie Davis)

## Version 5.6.0

* Adding Passes option for bitrate mode in x265 and x264 (thanks to Chriss)
* Fixing VVC encode options (thanks to Chriss)
* Removing distutils in favor of packaging