@@ -2,7 +2,8 @@
 
 ## Version 5.7.4
 
-* Fixing $578 Missing code signing to FastFlix exec inside of the installer (thanks to Sam Katakouzinos)
+* Fixing #579 Missing Infos and no Mouse-Over info in Subs-Panel since 5.7 (thanks to GeZorTenPlotZ)
+* Fixing #578 Missing code signing to FastFlix exec inside of the installer (thanks to Sam Katakouzinos)
 * Fixing #580 No Downmix key error on profile save (thanks to Hankuu)
 * Fixing #581 Fastflix could not recognize hevc video containing hdr10plus metadata with recent ffmpeg build (thanks to alpha-0)
 
